--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ tests/.coverage
 build/
 tests/report/
 
+*/migrations/
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
