- Поправил модель для отношений - добавил watch в webpack.config.js - добавил скрипты для запуска webpack в package.json - Убрал инициализацию infoTabs.js - Переписал генерацию таба на ecmascript 2015

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint static/js/*.js"
+    "lint": "eslint static/js/*.js",
+    "webpack-dev": "webpack -d",
+    "webpack-prod": "webpack -p"
   },
   "repository": {
     "type": "git",
