Добавлены package-lock.json и requirements.txt

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint static/js/*.js",
-    "webpack-dev": "webpack -d",
+    "start": "webpack -d --watch",
     "webpack-prod": "webpack -p"
   },
   "repository": {
